# eco-route

./: .env.example  .gitignore  README.md  docker-compose.yml  requirements.txt
experiments/: algorithm.py  cvrp_ortools.py  cvrp_sweeping.ipynb  example.cpp  example.py  hgs.md  hgs_cvrp_test.py  hygese_test.py  lp_ortools.py  notes.md  pyvrp_test.ipynb  requirements.txt  route_first_cluster_second.ipynb  run.sh  setup.py  solution.sol  solution.sol.PG.csv  solver_test.py  split.md  split_test.py  tsp_impl.py  tsp_ortools.py  vrp_ortools.py  vrp_savings.ipynb  vrppd_ortools.py
experiments/hgs_cvrp/: CMakeLists.txt  bindings.cpp  setup.py
src/: .env.example  docker-compose.yml
src/backend_java/: .dockerignore  .gitignore  Dockerfile  dev.sh  docker-compose.dev.yml  pom.xml
src/backend_python/: .dockerignore  .env.example  Dockerfile  Makefile  alns_solver.py  api.py  api_v2.py  benchmark.py  benchmark_results.csv  cli.py  dev.sh  ors.py  requirements.txt  solver.py
src/backend_python/gancp/: evaluate.py  genetic.py  local_search.py  model.py  mutations.py  population.py  read_mdvrp.py  utils.py
src/backend_python/hgs_cvrp/: InstanceCVRPLIB.cpp  InstanceCVRPLIB.h  Population.cpp  Population.h  main.cpp
src/mobile/: package-lock.json  package.json
src/mobile/app/: index.tsx
src/mobile_app/: .env  .env.example  .gitignore  app.json  package-lock.json  package.json
src/mobile_app/apis/: auth.ts  depot.ts  index.ts  notification.ts  order.ts  route.ts  user.ts  (+1 more)
src/web/: .dockerignore  .env.example  .gitignore  Dockerfile  package-lock.json  package.json
(+295 files in other folders)
